--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,8 +1,15 @@
-- name: 'Comment PR'
-  uses: actions/github-script@0.3.0
-  if: github.event_name == 'pull_request'
-  with:
-    github-token: ${{ secrets.GITHUB_TOKEN }}
-    script: |
-      const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-      github.issues.createComment({ issue_number, owner, repo, body: 'Hello world ! 👋' });
+on: pull_request
+
+jobs:
+  example_comment_pr:
+    runs-on: ubuntu-latest
+    name: An example job to comment a PR
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@master
+        with:
+          message: 'Thanks for opening this PR! 💙 @deep5050 will be reviewing this soon, in the mean time make sure you have followed the contribution guidelines'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
