--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,7 +3,7 @@ on: pull_request
 jobs:
   example_comment_pr:
     runs-on: ubuntu-latest
-    name: An example job to comment a PR
+    name: Auto comment a PR
     steps:
       - name: Checkout
         uses: actions/checkout@v1
